--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="app">
   <h3>Sort Movies by: 
     <button @click="sortLowest">Least Rated</button>
-    <button @click="sortHighest">Most Rated</button>
+    <button @click="sortHighest">Highest Rated</button>
   </h3>
   <table>
     <thead>
